--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,8 +44,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${AKIASEBV4CULGD3AXQMR}
-        aws-secret-access-key: ${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}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
         
     # 압축한 프로젝트를 S3로 전송합니다.
